--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 node_modules/
 
 # Database
-# database/
-# download_data.js
-# update_data.js
-# !database/coin_list.json
-# !database/exchange_limit.json
-# !database/ttf_ms.json
+database/
+download_data.js
+update_data.js
+!database/coin_list.json
+!database/exchange_limit.json
+!database/ttf_ms.json
 
 
 # Byte-compiled / optimized / DLL files
